# LightWeightRobotIGT

./: CMakeLists.txt  README.md
LightWeightRobotIGT/: CMakeLists.txt  qSlicerLightWeightRobotIGTModule.cxx  qSlicerLightWeightRobotIGTModule.h  qSlicerLightWeightRobotIGTModuleWidget.cxx  qSlicerLightWeightRobotIGTModuleWidget.h
LightWeightRobotIGT/Logic/: CMakeLists.txt  vtkSlicerLightWeightRobotIGTLogic.cxx  vtkSlicerLightWeightRobotIGTLogic.h
LightWeightRobotIGT/MRML/: CMakeLists.txt  vtkIGTLToMRMLPoint.cxx  vtkIGTLToMRMLPoint.h  vtkIGTLToMRMLString.cxx  vtkIGTLToMRMLString.h  vtkMRMLIGTLSessionManagerNode.cxx  vtkMRMLIGTLSessionManagerNode.h
LightWeightRobotIGT/Resources/: qSlicerLightWeightRobotIGTModule.qrc
LightWeightRobotIGT/Resources/UI/: qSlicerLightWeightRobotIGTFooBarWidget.ui  qSlicerLightWeightRobotIGTFooBarWidget_backup.ui  qSlicerLightWeightRobotIGTModuleWidget.ui
LightWeightRobotIGT/Widgets/: CMakeLists.txt  qSlicerLightWeightRobotIGTFooBarWidget - Kopie.cxx  qSlicerLightWeightRobotIGTFooBarWidget.cxx  qSlicerLightWeightRobotIGTFooBarWidget.h
